--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -14,6 +14,10 @@
   background-color: #ffce00 !important;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Heading Pro", "Inter", Arial, Helvetica, sans-serif;
 }
